--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --primary-bg-color: #C8D2AD;
+  --primary-bg-color: #F6E4C0;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -46,10 +46,9 @@ h1 {
 }
 
 .logo {
-  height: 6em;
+  height: 20em;
   padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  margin: 0 auto
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
