--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
 
 :root {
   --primary-bg-color: #F6E4C0;
+  --dark-mode-bg-color: #d84527;
+  --button-color: #276ed8;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -72,7 +74,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--button-color);
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -84,10 +86,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: var(--dark-mode-bg-color);
   }
   a:hover {
     color: #747bff;
@@ -98,5 +100,5 @@ button:focus-visible {
 }
 
 .primary-bg {
-  background-color: #C8D2AD;
+  background-color: #b32323;
 }
