--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
@@ -98,6 +99,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
 
 .primary-bg {
   background-color: #b32323;
