--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,13 @@
   --primary-bg-color: #F6E4C0;
   --dark-mode-bg-color: #d84527;
   --button-color: #276ed8;
+  --text-color: #1a1a1a;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #1a1a1a;
+  color: var(--text-color);
   background-color: var(--primary-bg-color);
 
   font-synthesis: none;
@@ -20,11 +21,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: var(--text-color);
+  text-decoration: underline;
 }
 a:hover {
-  color: #535bf2;
+  text-decoration: none;
 }
 
 body {
